# CLOB-demo

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README_SETUP.md  README_TESTNET.md  Taskfile.yml  decode_order.sh  deploy-clob.sh  docker-compose.yml  foundry.toml  package-lock.json  package.json  remappings.txt  wavs.toml
.claude/: Dockerfile.claude
.github/: single-wavs-image-verifier.bash
.github/workflows/: rust.yml
components/aggregator/: Cargo.toml  Makefile  README.md
components/aggregator/src/: bindings.rs  gas_oracle.rs  lib.rs  utils.rs
components/clob/: Cargo.toml  Makefile
components/clob/src/: bindings.rs  lib.rs  solidity.rs  trigger.rs
config/: COMPONENT_CONFIGURATION.md  MULTI_COMPONENT_DEPLOYMENT.md  components.json
script/: .solhint.json  Common.s.sol  DeployTestToken.s.sol  build-service.sh  configure-components.sh  create-aggregator.sh  create-deployer.sh  create-operator.sh  deploy-contracts.sh  deploy-script.sh  upload-components-background.sh
script/data/: vesting_allocations.json
script/examples/: EASAttestExamples.md  GovernanceExamples.md  MerklerExamples.md  SchemaExamples.md
src/contracts/clob/: CLOB.sol
src/contracts/merkle/: MerkleSnapshot.sol  UniqueEnvelope.sol
src/contracts/tokens/: DAICOVault.sol  ENOVA.sol  MockUSDC.sol
src/interfaces/: IDAICO.sol  IIndexedEvents.sol  IPredictionMarketController.sol  ITypes.sol  IWavsIndexer.sol  IWavsNftServiceTypes.sol  IWavsTrigger.sol
src/interfaces/merkle/: IMerkleSnapshot.sol  IMerkleSnapshotHook.sol  IMerkler.sol
taskfile/: build.yml  config.yml  deploy.yml  docker.yml  eas.yml  env.yml  forge.yml  governance.yml  operator.yml  services.yml  wasi.yml
telemetry/: docker-compose.yml  telemetry.md
