[workspace]
members = ["components/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.5.5"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.87.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
wit-bindgen = "0.44.0"
wstd = "0.5.4"
wasi = "0.14.2"
wavs-wasi-utils = "=1.0.0"

# WAVS
wavs-llm = { path = "./packages/llm" }
wavs-eas = { path = "./packages/eas" }
wavs-indexer-api = { path = "./packages/indexer-api" }
wavs-merkle-sources = { path = "./packages/merkle-sources" }

# Other
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
async-trait = "0.1.88"
inventory = "0.3"
futures = "0.3.31"

## Alloy
alloy-sol-macro = { version = "1.0.0", features = ["json"] }
alloy-sol-types = "1.0.0"
alloy-dyn-abi = "1.0.0"
alloy-json-abi = "1.0.0"
alloy-primitives = "1.0.0"
alloy-network = "1.0.0"
alloy-provider = { version = "1.0.0", default-features = false, features = [
    "rpc-api",
] }
alloy-rpc-types = "1.0.0"
alloy-contract = "1.0.0"
alloy-transport-http = { version = "1.0.0", default-features = false }

## IPFS
cid = "0.7"
multibase = "0.9"
multihash = "0.18"
bs58 = "0.5"

## Common dependencies
hex = "0.4.3"
ethabi = "18.0.0"
primitive-types = "0.13.1"
base64 = "0.22.1"
mockall = "0.11"
thiserror = "1.0.47"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.47.1", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
