[package]
name = "clob"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport-http = { workspace = true }
wit-bindgen-rt = { workspace = true, features = ["async"] }
# bincode = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }
wit-bindgen = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[package.metadata.component]
package = "component:clob"
target = "wavs:operator@=1.2.0"
